# S4-OpenGL-TP

./: .gitignore  CMakeLists.txt  README.md
TP3_exo1_triangle_blanc/: main.cpp
TP3_exo2_triangle_couleurs/: main.cpp
TP3_exo2_triangle_couleurs/shaders/: triangle.fs.glsl
TP3_exo3_structure_vertex/: main.cpp
TP3_exo4_quad/: main.cpp
TP3_exo5_disque/: main.cpp
TP4_exo1/: main.cpp
TP4_exo1/shaders/: color2D.fs.glsl  color2D.vs.glsl  grey2d.fs.glsl  grey2d.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
TP4_exo2/: main.cpp
TP4_exo3/: main.cpp
TP4_exo3/shaders/: tex2D.fs.glsl  tex2D.vs.glsl  triangle.vs.glsl
TP5_lune/: main.cpp
TP5_lune/shaders/: 3D.vs.glsl  normal.fs.glsl  text3D.fs.glsl
maths/: main.cpp
maths2/: main.cpp
